# agentarena

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: bench.yaml  go.yaml  node-typescript.yaml  python-pytest.yaml  react-nextjs.yaml
src/agentarena/: __init__.py  cli.py  config.py  history.py  reporter.py  runner.py  sandbox.py  validator.py
src/agentarena/agents/: base.py
src/agentrace/: __init__.py  cli.py  history.py  metrics.py  reporter.py  runner.py  sandbox.py
src/agentrace/agents/: base.py
tests/: test_agents.py  test_config.py  test_history.py  test_metrics.py  test_reporter.py  test_runner.py  test_sandbox.py  test_validator.py
